log
Mon 06 May 2024 11:36:58 PM UTC: 
 tests:  1|8
total_score: 0/70
42b9628
Thu 09 May 2024 12:57:47 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|8
total_score: 0/70
360c70b
Thu 09 May 2024 12:58:48 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:48:5: error: expected identifier or ‘(’ before ‘return’
   48 |     return NULL;
      |     ^~~~~~
treemap.c:49:1: error: expected identifier or ‘(’ before ‘}’ token
   49 | }
      | ^
Compilation failed
ced0990
Thu 09 May 2024 12:58:55 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/70
d8a6ccb
Thu 09 May 2024 12:59:09 AM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  4|7
total_score: 5/70
5ad9687
Thu 09 May 2024 01:00:29 AM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:15: error: unused variable ‘parent’ [-Werror=unused-variable]
   51 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
a8f9d98
Thu 09 May 2024 01:03:38 AM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:15: error: unused variable ‘new’ [-Werror=unused-variable]
   60 |     TreeNode *new = createTreeNode(key, value);
      |               ^~~
treemap.c:51:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   51 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2603e75
Thu 09 May 2024 01:06:22 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
8e47fbc
Thu 09 May 2024 01:11:07 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
   66 | }
      | ^
treemap.c: In function ‘minimum’:
treemap.c:69:22: error: ‘TreeNode’ has no member named ‘root’
   69 |     if(x == NULL || x->root == NULL) return NULL;
      |                      ^~
Compilation failed
9fe526f
Thu 09 May 2024 01:11:25 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:66:1: error: expected identifier or ‘(’ before ‘}’ token
   66 | }
      | ^
Compilation failed
ad62ae1
Thu 09 May 2024 01:12:02 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|6
total_score: 5/70
4c04640
Thu 09 May 2024 01:18:41 AM UTC: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  13|5
total_score: 15/70
3aedc68
Thu 09 May 2024 01:31:50 AM UTC: 
 treemap.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  13|5
total_score: 15/70
21e80b7
Thu 09 May 2024 01:35:26 AM UTC: 
 treemap.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
 tests:  14|5
total_score: 20/70
d7d1811
Thu 09 May 2024 01:43:47 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  16|4
total_score: 30/70
ca4f42f
Thu 09 May 2024 01:50:33 AM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 35/70
a819e2e
Thu 09 May 2024 01:53:14 AM UTC: 
 treemap.c | 34 +++++++++++++++++++++++++++++-----
 1 file changed, 29 insertions(+), 5 deletions(-)
 tests:  23|2
total_score: 50/70
50a37c1
Thu 09 May 2024 02:13:51 AM UTC: 
 treemap.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘upperBound’:
treemap.c:152:15: error: variable ‘test’ set but not used [-Werror=unused-but-set-variable]
  152 |     TreeNode *test = NULL;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
cb1f1db
Thu 09 May 2024 02:14:31 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  24|2
total_score: 50/70
bb768b2
Sat 11 May 2024 08:22:50 PM UTC: 
 treemap.c | 27 +++++++++++++--------------
 1 file changed, 13 insertions(+), 14 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:57:12: error: expected expression before ‘)’ token
   57 |         if()
      |            ^
treemap.c:53:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
017d9c9
Sat 11 May 2024 08:22:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:15: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |     TreeNode *parent = NULL;
      |               ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
1c573a5
Sat 11 May 2024 08:23:25 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:55:9: error: ‘parent’ undeclared (first use in this function)
   55 |         parent = aux;
      |         ^~~~~~
treemap.c:55:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
2318f15
Sat 11 May 2024 08:23:38 PM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  24|2
total_score: 50/70
928b0e3
Sat 11 May 2024 08:24:43 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  24|2
total_score: 50/70
10571bd
Sat 11 May 2024 08:27:28 PM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  24|2
total_score: 50/70
93d2c99
Sat 11 May 2024 08:30:08 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  24|2
total_score: 50/70
f8ceb2f
Sat 11 May 2024 08:32:10 PM UTC: 
 treemap.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  25|2
total_score: 50/70
1fc89e1
Sat 11 May 2024 08:32:29 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
48ec190
Sat 11 May 2024 08:33:57 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  26|1
total_score: 60/70
bb1dff2
Sat 11 May 2024 08:35:36 PM UTC: 
 treemap.c | 13 ++++---------
 1 file changed, 4 insertions(+), 9 deletions(-)
 tests:  25|1
total_score: 60/70
8595a6a
Sat 11 May 2024 08:36:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0f234f3
Sat 11 May 2024 08:36:16 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
349fa40
